# RenameMe

./: CMakeLists.txt  images.qrc
src/: RenameMeMainWindow.cpp  RenameMeMainWindow.h  RenameMePhotos.cpp  RenameMePhotos.h  RenameMeSettings.cpp  RenameMeSettings.h  RenameMeSettingsWindow.cpp  RenameMeSettingsWindow.h  RenameMeWindow.cpp  RenameMeWindow.h  images.qrc  main.cpp
